fix contact modal

--- a/src/layouts/components/sections/ContactSection.astro
+++ b/src/layouts/components/sections/ContactSection.astro
@@ -232,7 +232,7 @@ form = {
                   (input.groupLabel || input.label) && (
                     <label for="name" class="form-label">
                       {input.groupLabel || input.label || "Please set label"}
-                      {input.required && <span class="text-primary">*</span>}
+                      {input.required && <span class="text-inherit">*</span>}
                     </label>
                   )}
                 {input.dropdown ? (
