--- a/src/pages/[...lang]/[page].astro
+++ b/src/pages/[...lang]/[page].astro
@@ -42,6 +42,7 @@ export async function getStaticPaths() {
 const { page } = Astro.props;
 const { title, date } = page.data;
 const { Content } = await page.render();
+const isPolicyPage = page.id?.includes("privacy-policy");
 
 const t = await useTranslations(Astro.currentLocale as string);
 ---
@@ -50,12 +51,14 @@ const t = await useTranslations(Astro.currentLocale as string);
   <section class="section-light">
     <div class="container">
       <div class="has-video-modal mx-auto max-w-5xl" data-aos="fade-up-sm">
-        {title && (
-          <h1
-            class="text-4xl text-monire-deep-teal"
-            set:html={markdownify(title)}
-          />
-        )}
+        {
+          title && (
+            <h1
+              class="text-monire-deep-teal text-4xl"
+              set:html={markdownify(title)}
+            />
+          )
+        }
         <div class="mt-8 flex">
           {
             date && (
@@ -70,7 +73,8 @@ const t = await useTranslations(Astro.currentLocale as string);
         </div>
         <div
           class:list={[
-            "prose-styles lg:text-lg",
+            "prose-styles content-page-prose lg:text-lg",
+            isPolicyPage && "policy-page-prose",
             date ? "mt-10 md:mt-20" : "mt-5 md:mt-10",
           ]}>
           <Content />
