--- a/src/layouts/components/global/Footer.astro
+++ b/src/layouts/components/global/Footer.astro
@@ -215,7 +215,7 @@ const encodedEmail = encodeEmail(contact.email);
     content: "/";
     display: inline-block;
     margin: 0 0.75rem;
-    color: rgb(255 255 255 / 0.56);
+    color: var(--color-light);
     line-height: 1;
     transform: translateY(-0.01em);
   }
