--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -4,11 +4,8 @@
   @apply z-30 w-full;
 
   &.sticky-header {
-    position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
-    width: 100% !important;
+    position: sticky !important;
+    top: clamp(0.45rem, 1.2vw, 0.9rem) !important;
     z-index: 50 !important;
     background: transparent !important;
     transition:
