--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,9 +5,7 @@ html {
     "lnum" 1,
     "tnum" 1;
   /* Lining and tabular numbers */
-  overflow-x: hidden;
-  width: 100%;
-  scrollbar-width: thin;
+  overflow-x: clip;
 }
 
 @font-face {
@@ -31,33 +29,7 @@ html {
 
 body {
   @apply bg-body font-primary text-text-default leading-normal font-normal;
-  overflow-x: hidden;
-  width: 100%;
-  background-color: var(--color-bg-page);
-  margin: 0;
-  scrollbar-width: thin;
-}
-
-html::-webkit-scrollbar,
-body::-webkit-scrollbar {
-  width: 0.65rem;
-  height: 0.65rem;
-}
-
-html::-webkit-scrollbar-track,
-body::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-html::-webkit-scrollbar-thumb,
-body::-webkit-scrollbar-thumb {
-  background: color-mix(in srgb, var(--color-monire-deep-teal) 45%, white);
-  border-radius: 999rem;
-}
-
-html::-webkit-scrollbar-thumb:hover,
-body::-webkit-scrollbar-thumb:hover {
-  background: color-mix(in srgb, var(--color-monire-deep-teal) 65%, white);
+  overflow-x: clip;
 }
 
 .font-hero {
@@ -69,7 +41,7 @@ body::-webkit-scrollbar-thumb:hover {
   @apply [&::-webkit-scrollbar]:w-3 [&::-webkit-scrollbar-thumb]:bg-white/15 [&::-webkit-scrollbar-track]:bg-transparent;
 }
 .has-customized-scrollbar {
-  @apply [&::-webkit-scrollbar]:w-3! [&::-webkit-scrollbar-thumb]:bg-white/15! [&::-webkit-scrollbar-track]:bg-transparent!;
+  @apply [&::-webkit-scrollbar]:w-3! [&::-webkit-scrollbar-thumb]:bg-white/15! [&::-webkit-scrollbar-track]:bg-transparent!; 
 }
 
 /* Global Section Spacing */
