--- a/src/layouts/components/sections/PricingSection.astro
+++ b/src/layouts/components/sections/PricingSection.astro
@@ -16,7 +16,7 @@ const { title, subtitle, plans, list, heading, description, ai_automations } =
   content;
 ---
 
-<section id="pricing" class="pricing-vibe relative overflow-hidden">
+<section id="pricing" class="pricing-dark-teal relative overflow-hidden">
   <div class="pricing-orb pricing-orb-1" aria-hidden="true"></div>
   <div class="pricing-orb pricing-orb-2" aria-hidden="true"></div>
   <!-- background glows -->
