--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -37,7 +37,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
 
 <style>
   .about-flow {
-    background: var(--gradient-vibe-dark);
+    background: var(--gradient-dark-teal);
   }
 
   .about-flow-orb {
@@ -53,7 +53,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
     right: -5rem;
     width: 22rem;
     height: 22rem;
-    background: var(--color-vibe-orb-strong);
+    background: var(--color-dark-teal-orb-strong);
   }
 
   .about-flow-orb-2 {
@@ -61,7 +61,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
     left: -4rem;
     width: 18rem;
     height: 18rem;
-    background: var(--color-vibe-orb-soft);
+    background: var(--color-dark-teal-orb-soft);
   }
 
   .about-flow > section {
